# aspinwall-launcher

./: .flake8  .gitignore  CODINGSTYLE.md  CONTRIBUTING.md  LICENSE  README.md  meson.build  run  run-shell  run-tests  run-xnest  setup.py
.github/workflows/: tests.yml
aspinwall/launcher/: app_chooser.py  config.py  launcher.css  launcher_boxes.py  launcherboxes.py  wallpaper.py  widget_chooser.py  widgetchooser.py  widgets.py  window.py
aspinwall/launcher/ui/: appchooser.ui  appicon.ui  aspwidget.ui  clockbox.ui  launcher.ui  widgetbox.ui  widgetchooser.ui  widgetheader.ui  widgetinfobox.ui
aspinwall/stylesheet/: default-dark.css  default-hc.css  launcher.css
aspinwall/widgets/: __init__.py  loader.py
aspinwall/widgets/default/: welcome.py
aspinwall/widgets/default/org.dithernet.aspinwall.widgets.welcome/: welcome.py
data/: gschemas.compiled  meson.build  org.dithernet.aspinwall.launcher.desktop.in  org.dithernet.aspinwall.launcher.gschema.xml  org.dithernet.aspinwall.shell.gschema.xml  start-aspinwall.in
data/icons/: meson.build
data/stylesheet/: aspinwall.gresource.xml  launcher.css  meson.build  shell.css  style-dark.css  style-hc.css  style.css
data/x11/: aspinwall.desktop  autostart  autostart.in  meson.build
docs/contributing/: coding_style.md  contributing.md  documentation_style.md
docs/widgets/: api_reference.md  creating_widgets.md  loading_mechanism.md  packaging.md  widget_api.md
po/: LINGUAS  POTFILES  aspinwall.pot  da.po  en.po  fr.po  ko.po  meson.build  nb_NO.po  org.dithernet.aspinwall.Launcher.pot  pl.po  tr.po  update-po
src/: aspinwall-launcher.gresource.xml  aspinwall-launcher.in  main.py  meson.build
src/launcher/: about.py  app_chooser.py  aspinwall-launcher.in  clockbox.py  config.py  launcher_boxes.py  meson.build  settings.py  wallpaper.py  widget_chooser.py  widgetbox.py  widgetmanager.py  widgets.py  widgetview.py  window.py
src/launcher/ui/: about.ui  appchooser.ui  appicon.ui  aspinwall.launcher.gresource.xml  clockbox.ui  launcher.ui  launcherwidget.ui  meson.build  settings.ui  wallpaper.ui  wallpapericon.ui  widgetbox.ui  widgetchooser.ui  widgetheader.ui  widgetinfobox.ui  widgetview.ui  widgetviewheader.ui
src/shell/: aspinwall-shell.in  config.py  control_panel.py  meson.build  notification_popup.py  notificationbox.py  panel.py  shellmanager.py  surface.py  window_switcher.py
src/shell/interfaces/: __init__.py  battery.py  manager.py  meson.build  networkmanager.py  notification.py  pulseaudio.py  window.py  x11window.py
src/shell/ui/: aspinwall.shell.gresource.xml  controlpanel.ui  controlpanelbutton.ui  controlpanelcontainer.ui  meson.build  notificationbox.ui  notificationpopup.ui  panel.ui  windowswitcher.ui  windowview.ui
src/stylesheet/: launcher.css  meson.build  style-dark.css  style-hc.css  style.css
src/ui/: about.ui  appchooser.ui  appicon.ui  appiconfactory.ui  aspinwall.launcher.gresource.xml  clockbox.ui  launcher.ui  settings.ui  wallpaper.ui  wallpapericon.ui  widgetbox.ui  widgetchooser.ui  widgetinfobox.ui  widgetinstalldialog.ui  widgetview.ui  widgetviewheader.ui
src/utils/: clock.py  dimmable.py  meson.build
src/widgets/: __init__.py  data.py  loader.py  meson.build  package.py
tests/: meson.build  test_launcher.py  test_widgets.py
widgets/: meson.build
widgets/org.dithernet.aspinwall.widgets.notepad/: __widget__.py  meson.build  notepad.py
widgets/org.dithernet.aspinwall.widgets.notepad/po/: LINGUAS  POTFILES  da.po  en.po  meson.build  nb_NO.po  org.dithernet.aspinwall.widgets.notepad.pot  pl.po
widgets/org.dithernet.aspinwall.widgets.notepad/schemas/: meson.build  org.dithernet.aspinwall.widgets.notepad.gschema.xml
widgets/org.dithernet.aspinwall.widgets.notepad/stylesheet/: style.css
widgets/org.dithernet.aspinwall.widgets.todo/: __widget__.py  meson.build  todo.py
widgets/org.dithernet.aspinwall.widgets.todo/po/: POTFILES  en.po  meson.build  org.dithernet.aspinwall.widgets.todo.pot  pl.po
widgets/org.dithernet.aspinwall.widgets.todo/schemas/: meson.build  org.dithernet.aspinwall.widgets.todo.gschema.xml
widgets/org.dithernet.aspinwall.widgets.weather/: __widget__.py  content.py  meson.build  org.dithernet.aspinwall.widgets.Weather.gresource.xml
widgets/org.dithernet.aspinwall.widgets.weather/po/: POTFILES  meson.build  org.dithernet.aspinwall.widgets.worldclock.pot
widgets/org.dithernet.aspinwall.widgets.weather/schemas/: meson.build  org.dithernet.aspinwall.widgets.weather.gschema.xml
widgets/org.dithernet.aspinwall.widgets.weather/stylesheet/: style.css
widgets/org.dithernet.aspinwall.widgets.weather/ui/: settings.ui  weathercontent.ui
widgets/org.dithernet.aspinwall.widgets.welcome/: __widget__.py  meson.build  welcome.py
widgets/org.dithernet.aspinwall.widgets.welcome/po/: POTFILES  da.po  en.po  meson.build  nb_NO.po  org.dithernet.aspinwall.widgets.welcome.pot  pl.po
widgets/org.dithernet.aspinwall.widgets.worldclock/: __widget__.py  meson.build  org.dithernet.aspinwall.widgets.WorldClock.gresource.xml  settings.py
widgets/org.dithernet.aspinwall.widgets.worldclock/po/: POTFILES  meson.build
widgets/org.dithernet.aspinwall.widgets.worldclock/schemas/: meson.build  org.dithernet.aspinwall.widgets.worldclock.gschema.xml
widgets/org.dithernet.aspinwall.widgets.worldclock/stylesheet/: meson.build  style.css
widgets/org.dithernet.aspinwall.widgets.worldclock/ui/: settings.ui
