pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
widgetdir = join_paths(pkgdatadir, 'widgets')

subdir('org.dithernet.aspinwall.widgets.notepad')
subdir('org.dithernet.aspinwall.widgets.todo')
subdir('org.dithernet.aspinwall.widgets.weather')
subdir('org.dithernet.aspinwall.widgets.welcome')
subdir('org.dithernet.aspinwall.widgets.worldclock')
